# is_sorted

./: .travis.ci  .travis.yml  Cargo.toml  README.md  license-mit.md  readme.md  rustfmt.toml
benches/: all.rs  until.rs
ci/: run.sh
src/: floats.rs  lib.rs  macros.rs  ord.rs  signed.rs  unsigned.rs
tests/: all.rs  floats.rs  integers.rs  until.rs
